tests/NormalTests/paczka1/small_fuzzy/45420561.err
Error in line 3: so86OBwW A418 95,3
Error in line 10: 4x0PEYle A707 7,9
Error in line 7: 91JKK S951 43,1
